Fixing mobile menu and styling alphabetical filters properly on mobile.

--- a/fotofe/angular/assets/css/less/layout/header.less
+++ b/fotofe/angular/assets/css/less/layout/header.less
@@ -8,7 +8,13 @@
 	@media @layoutMedium {
 		height: @headerHeightMedium;
 	}
-	
+	.l-container {
+		padding: 0;
+		@media @layoutMedium {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+	}
 	a {
 		color: @colorText;
 		text-decoration: none;
