--- a/fotofe/angular/assets/css/main.css
+++ b/fotofe/angular/assets/css/main.css
@@ -154,6 +154,15 @@ a:hover {
     height: 60px;
   }
 }
+.l-header .l-container {
+  padding: 0;
+}
+@media screen and (min-width: 768px) {
+  .l-header .l-container {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 .l-header a {
   color: #333333;
   text-decoration: none;
@@ -438,9 +447,16 @@ a.btn {
   color: #ffffff;
 }
 .btn--link {
+  width: 16.66%;
   background-color: transparent;
   border: none;
   color: #388099;
+}
+@media screen and (min-width: 768px) {
+  .btn--link {
+    width: auto;
+    padding: 0.5em;
+  }
 }
 .btn--link:hover {
   color: #2a6174;
